Fix site to work on IE

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,6 +30,14 @@
     
     .header-profile{
         text-align: center;
+
+        h1{
+            font-size: 2.92rem;
+        }
+
+        h2{
+            font-size: 1.64rem;
+        }
     }
 
     .view-more{
