--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -1,6 +1,7 @@
 .title{
     //width: 100%;
     font-weight: 700;
+    font-size: 2.28rem;
     //border-bottom: 2px solid $main-color;
     //line-height: 0.1em; 
     
